--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;600;800;900&display=swap');
 
 *{
     margin:0px;
@@ -9,28 +9,35 @@ body{
     font-family: 'Raleway', sans-serif;
     background-image: linear-gradient(to bottom right, #d3c7f0, #f1f0f5,#ffffff );
     background-repeat: no-repeat;
-    height: 1700px;
+
 }
 
 .Nav-Container{
-    padding: 80px 157px 0px 109px;
+    padding: 80px 157px 0px 168px;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-
-.Logo-Container{
+.Logo-Container p{
     font-size: 24px;
     color: #4B42E5;
+    font-weight: 900;
 }
-
-.Sub-Container a, button{
+.Sub-Container a{
     padding-right: 20px;
     text-decoration: none;
     color: #414141;
     font-size: 18px;
     opacity: 1;
+    font-weight: 600;
 }
+
+@media(max-width: 1000px){
+    .Sub-Container a{
+        font-size: 16px;
+    }
+}
+
 .Sub-Container button{
     border: none;
     border-radius: 10px;
@@ -39,11 +46,10 @@ body{
     background-color:#4B42E5;
     color:#ffffff;
     font-size: 18px;
-    font-weight: bold;
+    font-weight: 600;
 }
 
 .Section-Container{
-    max-width: 100%;
     margin-top:30px;
     display: flex;
     justify-content: space-between;
@@ -51,14 +57,27 @@ body{
 }
 
 .Content{
-    padding-left:109px;
-    width: 60%;
+    padding-left:159px;
+    width: 50%;
     margin-top:70px;
+}
+
+@media(max-width: 900px){
+    .Content .Bold-text{
+        font-size: 60px;
+    }
+}
+
+@media(max-width: 900px){
+    .Section-Container{
+        display: block;
+    }
 }
 
 .Bold-text p{
     margin: 0px;
     font-size: 70px;
+    font-weight: 900;
     color: #313131;
     opacity: 1;
 }
@@ -67,6 +86,7 @@ body{
     margin-top: 20px;
     margin:0px;
     font-size: 18px;
+    font-weight: 600;
     color: #313131;
     opacity: 1;
 }
@@ -80,49 +100,94 @@ body{
     background-color:#4B42E5;
     color:#ffffff;
     font-size: 18px;
+    font-weight: 600;
 }
 .Image{
-    padding-right: 157px;
-    width: 40%;
+    position: relative;
+    padding-right: 15px;
+    width: 50%;
 }
-.Image img{
+.Image .man{
     position: absolute;
     width: 492px;
     height: 649px;
 }
 
-/* .Img1 img{
-   
-    width:94px;
-    height:91px;
+.Image .Poly-img{
+    position: absolute;
+    top: 175px;
+    left: 57px;
+    width: 94px;
+    height: 91px;
 }
-.Img2 img{
-    
+
+.Image .Ell2{
+    position: absolute;
+    right: 200px;
+    top: 147px;
     width: 16px;
-    height:16px;
+    height: 16px;
 }
-.Img3 img{
-    
-    width:106px;
-    height:106px;
-} */
+
+.Image .Ell1{
+    position: absolute;
+    right: 57px;
+    bottom: -158px;
+    z-index: -1;
+    width: 106px;
+    height: 106px;
+
+}
 .Main-Card{
     position:relative;
     margin-top: 200px;
     padding-left: 109px;
 }
 .Cards-Container{
-    
     display: flex;
-    justify-content: center;
+    flex-wrap: wrap;
+    justify-content: end;
     align-items: center;
 }
+@media (max-width:1037px){
+    .Cards-Container{
+        justify-content: flex-start;
+    }
+}
+
+@media(max-width:894px){
+    .Image .man{
+        position: relative;
+        width: 492px;
+        height: 649px;
+    }
+}
+
+@media(max-width:650px){
+    .card1{
+        padding:40px 0px 0px 23px;
+        width: 319px;
+        height: 200px;
+        background-color: #ffffff;
+    }
+    .card2{
+        padding:40px 0px 0px 23px;
+        width: 319px;
+        height: 200px;
+        background-color: #ffffff;
+    }
+    .card3{
+        padding:40px 0px 0px 23px;
+        width: 319px;
+        height: 200px;
+        background-color: #ffffff;
+    }
+}
 .card1{
-    
     padding:80px 0px 0px 56px;
-    width: 500px;
+    width: 419px;
     height: 300px;
-    background-color: #ffffff;  
+    background-color: #ffffff;
 }
 .Text1{
     margin-top: 20px;
@@ -132,18 +197,21 @@ body{
 }
 .Text1 p{
     font-size: 24px;
+    font-weight: 800;
     margin: 0px;
 }
 .Text2 p{
     font-size: 18px;
+    font-weight: 600;
     color: #909090;
     margin: 0px;
 }
 .card2{
     padding:80px 0px 0px 56px;
-    width: 500px;
+    width: 419px;
     height: 300px;
     background-color: #ffffff;
+    opacity: 1px;
 }
 .Text12{
     margin-top: 20px;
@@ -153,16 +221,18 @@ body{
 }
 .Text12 p{
     font-size: 24px;
+    font-weight: 800;
     margin: 0px;
 }
 .Text22 p{
     font-size: 18px;
+    font-weight: 600;
     color: #909090;
     margin: 0px;
 }
 .card3{
     padding:80px 0px 0px 56px;
-    width: 500px;
+    width: 419px;
     height: 300px;
     background-color: #ffffff;
     background-image: linear-gradient(to bottom right, #4B42E5, #8742E5);
@@ -176,12 +246,14 @@ body{
 }
 .Text13 p{
     font-size: 24px;
+    font-weight: 800;
     margin: 0px;
     color: #FFFFFF;
     opacity: 1;
 }
 .Text23 p{
     font-size: 18px;
+    font-weight: 600;
     color: #FFFFFF;
     margin: 0px;
     font-family: Raleway, SemiBold;
@@ -200,22 +272,100 @@ body{
 .End-Container{
     padding-left:109px;
     padding-right:157px;
+}
+
+.Last-Container{
     display:flex;
     justify-content: space-between;
-    align-items: center;
+    /* align-items: center; */
 }
 
 .Inner-Container{
     padding: 79px 0px 0px 105px;
+    position: relative;
     border-radius: 100px 100px 0px 0px;
-    width: 1200px;
-    height: 400px;
+    max-width: 1000px;
+    margin:auto;
+    height: 300px;
+    margin:auto;
     background-image: linear-gradient(to bottom right, #4B42E5, #8742E5);
 }
 
 .Inner-Container p{
     margin: 0px;
     font-size: 70px;
+    font-weight: 900;
     font-family: Raleway, Black;
     color:#FFFFFF;
+}
+
+@media(max-width: 1036px){
+    .Inner-Container {
+        text-align:center;
+    }
+    .Inner-Container p{
+        font-size: 60px;
+    }
+}
+
+@media(max-width: 969px){
+    .Inner-Container {
+        padding: 20px;
+        text-align:center;
+    }
+    .Inner-Container p{
+        font-size: 50px;
+    }
+
+}
+
+@media(max-width: 498px){
+    .Inner-Container {
+        padding: 20px;
+        text-align:center;
+    }
+    .Inner-Container p{
+        font-size: 30px;
+    }
+
+}
+
+
+img.white-circle {
+    position: absolute;
+    right: 0;
+    top: 226px;
+}
+
+img.Half-circle {
+    position: absolute;
+    right: -51px;
+    z-index: -1;
+}
+
+.man::after{
+    content: " ";
+    display: block;
+    position: absolute;
+    right: 50%;
+    top: 50%;
+    background-image: url(Ellipse\ 2.png);
+    width: 16px;
+    height: 16px;
+    background-repeat: no-repeat;
+}
+
+.man::before{
+    content: " ";
+    display: block;
+    position: absolute;
+    background-image: url(Polygon\ 3.png);
+    top: 46%;
+    width: 160px;
+    height: 160px;
+    background-repeat: no-repeat;
+}
+
+.man{
+    position: relative;
 }
